@@ -1,3 +1,8 @@
+2008-04-15  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Marshaller.cs: marshal null string arrays as a null IntPtr[].
+	[Fixes #378514]
+
 2008-04-14  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Application.cs: add QuitPrepare event for Gnome.Program usage.
